# point-cloud-viewer

./: CMakeLists.txt  LICENSE  README.md  image.qrc  images.qrc  inputdialog.cpp  inputdialog.h  inputdialog.ui  logo.rc  main.cpp  pclvisualizer.cpp  pclvisualizer.h  pclvisualizer.ui  pclvisualizer.ui.autosave
data/: 0.ply  1.ply  bunny.pcd  bunny.ply
introduction/: 点云处理及三维重建软件（PCV）的设计与实现  点云处理及三维重建软件（PCV）的设计与实现.md  点云配准相关功能包括关键点提取算法以及点云配准算法.md
